--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -3,6 +3,33 @@
 
 @import "normalize/normalize";
 
+//Font-face
+// =========================================================================
+
+@font-face {
+    font-family: 'Merriweather';
+    src: url('../fonts/subset-Merriweather-Regular.woff2') format('woff2'),
+        url('../fonts/subset-Merriweather-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Merriweather';
+    src: url('../fonts/subset-Merriweather-Bold.woff2') format('woff2'),
+        url('../fonts/subset-Merriweather-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Merriweather';
+    src: url('../fonts/subset-Merriweather-Black.woff2') format('woff2'),
+        url('../fonts/subset-Merriweather-Black.woff') format('woff');
+    font-weight: 900;
+    font-style: normal;
+}
+
 // Global styles
 // =========================================================================
 
@@ -29,3 +56,50 @@ a {
 
 // Fonts
 // =========================================================================
+
+$merriweather: 'Merriweather', Georgia, serif;
+
+// Colors
+// =========================================================================
+
+$white: #ffffff;
+$black: #000000;
+
+// Basic
+// =========================================================================
+
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+
+  white-space: nowrap;
+
+  border: 0;
+
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.body {
+  min-width: 1000px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  font-family: $merriweather;
+  color: $black;
+
+  background-color: $white;
+}
