--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -7,27 +7,25 @@
 // =========================================================================
 
 @font-face {
-    font-family: 'Merriweather';
-    src: url('../fonts/subset-Merriweather-Regular.woff2') format('woff2'),
-        url('../fonts/subset-Merriweather-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
+  font-weight: 400;
+  font-family: "Merriweather";
+  font-style: normal;
 
-@font-face {
-    font-family: 'Merriweather';
-    src: url('../fonts/subset-Merriweather-Bold.woff2') format('woff2'),
-        url('../fonts/subset-Merriweather-Bold.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
+  src: url("../fonts/subset-Merriweather-Regular.woff2") format("woff2"), url("../fonts/subset-Merriweather-Regular.woff") format("woff");
 }
-
 @font-face {
-    font-family: 'Merriweather';
-    src: url('../fonts/subset-Merriweather-Black.woff2') format('woff2'),
-        url('../fonts/subset-Merriweather-Black.woff') format('woff');
-    font-weight: 900;
-    font-style: normal;
+  font-weight: 700;
+  font-family: "Merriweather";
+  font-style: normal;
+
+  src: url("../fonts/subset-Merriweather-Bold.woff2") format("woff2"), url("../fonts/subset-Merriweather-Bold.woff") format("woff");
+}
+@font-face {
+  font-weight: 900;
+  font-family: "Merriweather";
+  font-style: normal;
+
+  src: url("../fonts/subset-Merriweather-Black.woff2") format("woff2"), url("../fonts/subset-Merriweather-Black.woff") format("woff");
 }
 
 // Global styles
@@ -39,8 +37,8 @@ html {
 }
 
 *,
-*::before,
-*::after {
+*::after,
+*::before {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
 }
@@ -57,13 +55,19 @@ a {
 // Fonts
 // =========================================================================
 
-$merriweather: 'Merriweather', Georgia, serif;
+$merriweather: "Merriweather", Georgia, serif;
 
 // Colors
 // =========================================================================
 
 $white: #ffffff;
 $black: #000000;
+//https://artsexperiments.withgoogle.com/artpalette/colors/94919c-cbc7c8-f9ebdd-36346c-55505e
+$dark: #55505e;
+$blue: #36346c;
+$light: #f9ebdd;
+$grey0: #cbc7c8;
+$grey1: #94919c;
 
 // Basic
 // =========================================================================
@@ -86,20 +90,138 @@ $black: #000000;
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 1170px;
   margin: 0 auto;
   padding-right: 20px;
   padding-left: 20px;
 }
 
 .body {
-  min-width: 1000px;
+  min-width: 1170px;
 
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
   font-family: $merriweather;
-  color: $black;
+  color: $dark;
 
   background-color: $white;
+}
+
+// Header
+// =========================================================================
+
+.header {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  min-height: 80px;
+  padding-top: 10px;
+  margin-bottom: 20px;
+}
+
+.header__logo {
+  margin-right: 20px;
+  max-width: 155px;
+  height: auto;
+}
+
+.header__heading {
+  margin: 0;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  align-self: flex-end;
+  text-align: center;
+  color: $dark;
+  font-style: normal;
+  font-size: 30px;
+  line-height: 42px;
+  font-weight: 700;
+  vertical-align: bottom;
+}
+
+// Main
+// =========================================================================
+
+// Aside
+// =========================================================================
+
+.aside {
+  position: fixed;
+  width: 210px;
+}
+
+// Branch list
+// =========================================================================
+
+.branch {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 40px;
+  margin-top: 20px;
+}
+
+.branch__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.branch__item {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
+}
+
+// Departments list
+// =========================================================================
+
+.departments__title {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.departments__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.departments__item {
+  margin-bottom: 10px;
+}
+
+// Employees
+// =========================================================================
+
+.employees {
+  padding-left: 210px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.employees__title {
+  width: 100%;
+}
+
+.department {
+  width: 100%;
+}
+
+.employees__list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+.person {
+  width: 210px;
+  margin-right: 10px;
 }
