Added @media queries

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -63,11 +63,37 @@ $merriweather: "Merriweather", Georgia, serif;
 $white: #ffffff;
 $black: #000000;
 //https://artsexperiments.withgoogle.com/artpalette/colors/94919c-cbc7c8-f9ebdd-36346c-55505e
-$dark: #55505e;
-$blue: #36346c;
-$light: #f9ebdd;
-$grey0: #cbc7c8;
-$grey1: #94919c;
+$color1: #55505e;
+$color2: #36346c;
+$color3: #f9ebdd;
+$color4: #cbc7c8;
+$color5: #94919c;
+$color6: #8a6267;
+
+// Breakpoints
+// =========================================================================
+
+$small: 1150px;
+$medium: 1380px;
+$large: 1840px;
+
+@mixin respond-to($media) {
+  @if $media == small-screens {
+    @media only screen and (min-width: $small) {
+      @content;
+    }
+  }
+  @else if $media == medium-screens {
+    @media only screen and (min-width: $medium + 1) and (max-width: $large - 1) {
+      @content;
+    }
+  }
+  @else if $media == wide-screens {
+    @media only screen and (min-width: $large) {
+      @content;
+    }
+  }
+}
 
 // Basic
 // =========================================================================
@@ -90,20 +116,24 @@ $grey1: #94919c;
 }
 
 .container {
-  max-width: 1170px;
+  max-width: $small + 40px;
   margin: 0 auto;
   padding-right: 20px;
-  padding-left: 20px;
+  padding-left: 20px;@include respond-to (medium-screens) {
+    max-width: $medium + 40px;
+  };@include respond-to (wide-screens) {
+    max-width: $large + 40px;
+  };
 }
 
 .body {
-  min-width: 1170px;
+  min-width: $small + 40px;
 
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
   font-family: $merriweather;
-  color: $dark;
+  color: $color1;
 
   background-color: $white;
 }
@@ -116,29 +146,27 @@ $grey1: #94919c;
   flex-wrap: wrap;
   align-items: center;
   min-height: 80px;
+  margin-bottom: 40px;
   padding-top: 10px;
-  margin-bottom: 20px;
-}
-
-.header__logo {
-  margin-right: 20px;
-  max-width: 155px;
-  height: auto;
+  padding-left: 210px;
 }
 
 .header__heading {
-  margin: 0;
-  padding: 0;
-  margin-left: auto;
-  margin-right: auto;
   align-self: flex-end;
-  text-align: center;
-  color: $dark;
-  font-style: normal;
+  margin: 0;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0;
+
+  font-weight: 900;
   font-size: 30px;
   line-height: 42px;
-  font-weight: 700;
   vertical-align: bottom;
+  text-align: center;
+  color: $color1;
+  text-transform: uppercase;
+  font-style: normal;
+  letter-spacing: 1px;
 }
 
 // Main
@@ -149,7 +177,17 @@ $grey1: #94919c;
 
 .aside {
   position: fixed;
+  top: 10px;
+
   width: 210px;
+  margin-right: 20px;
+}
+
+.aside__logo {
+  // margin-right: 20px;
+  max-width: 155px;
+  height: auto;
+  margin-bottom: 30px;
 }
 
 // Branch list
@@ -157,21 +195,30 @@ $grey1: #94919c;
 
 .branch {
   margin: 0;
+  margin-bottom: 30px;
   padding: 0;
-  margin-bottom: 40px;
-  margin-top: 20px;
 }
 
 .branch__list {
   margin: 0;
   padding: 0;
+
   list-style: none;
 }
 
 .branch__item {
   margin: 0;
+  margin-bottom: 5px;
   padding: 0;
-  margin-bottom: 10px;
+
+  font-size: 16px;
+  line-height: 20px;
+  color: $color2;
+}
+
+.branch__item--active {
+  font-weight: 700;
+  color: $color6;
 }
 
 // Departments list
@@ -179,49 +226,103 @@ $grey1: #94919c;
 
 .departments__title {
   margin: 0;
+  margin-bottom: 20px;
   padding: 0;
+
+  font-weight: 700;
   font-size: 16px;
   line-height: 20px;
-  font-weight: 700;
-    margin-bottom: 20px;
 }
 
 .departments__list {
-  list-style: none;
   margin: 0;
   padding: 0;
+
+  list-style: none;
 }
 
 .departments__item {
   margin-bottom: 10px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
 }
 
 // Employees
 // =========================================================================
 
 .employees {
-  padding-left: 210px;
   display: flex;
-  flex-wrap: wrap;
   flex-grow: 0;
   flex-shrink: 0;
+  flex-wrap: wrap;
+  margin-left: 230px;
 }
 
 .employees__title {
   width: 100%;
+  margin: 0;
+  margin-bottom: 40px;
+  padding: 0;
+
+  text-align: center;
 }
 
 .department {
   width: 100%;
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
 }
 
 .employees__list {
   display: flex;
   flex-wrap: wrap;
+  margin: 0;
+  margin-bottom: 40px;
+  padding: 0;
+
   list-style: none;
 }
 
+// Person card
+// =========================================================================
+
 .person {
   width: 210px;
-  margin-right: 10px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+
+  background-color: $color3;
+  border-width: 1px;
+  border-style: solid;
+  border-color: $color6;
+  border-radius: 5px;
+  box-shadow: 1px 2px 1px 0 $color5;
+
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    background-color: $color4;
+  }
+}
+.person__photo {
+  width: 210px;
+  height: 280px;
+
+  border-width: 1px;
+  border-style: solid;
+  border-color: $color2;
+  border-radius: 5px;
+}
+
+.person__info {
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  padding: 5px;
 }
