--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -739,7 +739,8 @@ a {
   background-image: url("../img/person__mobile.png");
 }
 
-.person__subordinate {
+.person__subordinate,
+.person__manager {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -751,7 +752,8 @@ a {
   border-top: 1px dashed $color1;
 }
 
-.person__sub-title {
+.person__sub-title,
+.person__man-title {
   margin: 0;
   margin-bottom: 10px;
   margin-left: 5px;
@@ -780,13 +782,19 @@ a {
   border-bottom: 1px dashed $color1;
 }
 
-.person__sub-name {
+.person__sub-name,
+.person__man-name {
   margin-bottom: 5px;
 
   font-weight: 700;
   font-size: 12px;
   line-height: 14px;
 }
+
+.person__man-name {
+  margin-left: 5px;
+}
+
 
 // Popup
 // =========================================================================
