--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -244,6 +244,9 @@ a {
 
     background-color: $color2;
   }
+  &--index {
+    margin-top: 100px;
+  }
 }
 
 
@@ -260,7 +263,6 @@ a {
   min-height: 80px;
   margin-bottom: 40px;
   margin-left: 230px;
-  padding-top: 10px;
 
   transition: margin-right 1s linear;
 
@@ -270,6 +272,13 @@ a {
   &--shrinked {
     margin-right: 230px;
   }
+}
+
+.header__logo {
+  align-self: flex-start;
+  max-width: 155px;
+  height: auto;
+  margin-right: 50px;
 }
 
 .header__heading {
@@ -294,37 +303,35 @@ a {
 // =========================================================================
 
 .menu {
-  align-self: flex-start;
-  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  min-width: $breakpoint1;
+  max-width: 100vw;
   margin: 0;
   padding: 0;
+  padding-top: 10px;
   padding-left: 20px;
 }
 
 .menu--fixed {
   position: fixed;
-  top: 0;
-  left: 230px;
   z-index: 1;
 
-  max-width: calc(100% - 230px);
-  padding-top: 10px;
-  padding-right: 40px;
-  padding-left: 40px;
-
-  background-color: $white;@include respond-to (break4) {
-    left: 460px;
-
-    max-width: calc(100% - 460px);
-  }
+  background-color: $white;
+  border-bottom: 1px solid $color8;
 }
 
 .menu__list {
   display: flex;
   flex-grow: 0;
   flex-shrink: 0;
-  flex-basis: auto;
   flex-wrap: wrap;
+  width: calc(100% - 250px);
   margin: 0;
   padding: 0;
 
@@ -332,29 +339,33 @@ a {
 }
 
 .menu__item {
+  min-width: 90px;
   max-width: 100%;
   margin: 0;
+  margin-bottom: 5px;
   padding: 0;
-  padding-bottom: 5px;
-  padding-left: 6px;
+  padding-left: 5px;
 
-  font-size: 14px;
+  font-size: 12px;
   line-height: 16px;
-  color: $color2;@include respond-to (break4) {
-    font-size: 16px;
-    line-height: 18px;
+  vertical-align: middle;
+  color: $color2;
+
+  @include respond-to (break4) {
+    font-size: 14px;
+    line-height: 16px;
   };
 
   &--divider {
-    padding-left: 10px;
+    margin-right: 10px;
 
     font-weight: 700;
-    font-size: 12px;
-
-    border-left: none;
   }
   &--right {
     margin-left: auto;
+  }
+  &--wrap {
+    width: 100%;
   }
 }
 
@@ -426,18 +437,13 @@ a {
 
   width: 200px;
   height: 100%;
+  margin-top: 100px;
   margin-right: 20px;
   overflow: auto;
 
   @include respond-to (break4) {
     width: 450px;
   };
-}
-
-.aside__logo {
-  max-width: 155px;
-  height: auto;
-  margin-bottom: 30px;
 }
 
 // Departments list
@@ -814,7 +820,7 @@ a {
 
   width: 230px;
   height: 100vh;
-  padding-top: 10px;
+  margin-top: 100px;
   overflow: auto;
 }
 
@@ -832,7 +838,7 @@ a {
 
 .popup-close {
   position: absolute;
-  top: 15px;
+  top: 5px;
   left: 5px;
 
   width: 50px;
