Positioned sticky main menu under title

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -244,9 +244,6 @@ a {
 
     background-color: $color2;
   }
-  &--index {
-    margin-top: 100px;
-  }
 }
 
 
@@ -254,12 +251,6 @@ a {
 // =========================================================================
 
 .header {
-  display: flex;
-  flex-grow: 0;
-  flex-shrink: 0;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
   min-height: 80px;
   margin-bottom: 40px;
   margin-left: 230px;
@@ -283,8 +274,9 @@ a {
 
 .header__heading {
   align-self: flex-end;
-  margin: 0;
+  margin-top: 30px;
   margin-right: auto;
+  margin-bottom: 15px;
   margin-left: auto;
   padding: 0;
 
@@ -303,27 +295,30 @@ a {
 // =========================================================================
 
 .menu {
-  position: absolute;
-  top: 0;
-  left: 0;
-
   display: flex;
-  flex-wrap: wrap;
   align-items: flex-start;
-  min-width: $breakpoint1;
-  max-width: 100vw;
+  //min-width: $breakpoint1;
+  //max-width: 100vw;
   margin: 0;
+  margin-right: auto;
+  margin-left: auto;
   padding: 0;
-  padding-top: 10px;
-  padding-left: 20px;
+
+  border-left: 2px solid $color8;
 }
 
 .menu--fixed {
   position: fixed;
+  top: 0;
+  left: 0;
   z-index: 1;
+
+  padding-top: 10px;
+  padding-left: 20px;
 
   background-color: $white;
   border-bottom: 1px solid $color8;
+  border-left: none;
 }
 
 .menu__list {
@@ -331,17 +326,22 @@ a {
   flex-grow: 0;
   flex-shrink: 0;
   flex-wrap: wrap;
-  width: calc(100% - 250px);
+  width: 100%;
   margin: 0;
   padding: 0;
 
   list-style: none;
 }
 
+.menu--fixed .menu__list {
+  max-width: calc(100% - 250px);
+}
+
 .menu__item {
   min-width: 90px;
   max-width: 100%;
   margin: 0;
+  margin-right: 10px;
   margin-bottom: 5px;
   padding: 0;
   padding-left: 5px;
@@ -437,7 +437,7 @@ a {
 
   width: 200px;
   height: 100%;
-  margin-top: 100px;
+  //margin-top: 100px;
   margin-right: 20px;
   overflow: auto;
 
@@ -448,6 +448,10 @@ a {
 
 // Departments list
 // =========================================================================
+
+.departments {
+  margin-top: 20px;
+}
 
 .departments__title {
   margin: 0;
@@ -820,7 +824,7 @@ a {
 
   width: 230px;
   height: 100vh;
-  margin-top: 100px;
+  //margin-top: 100px;
   overflow: auto;
 }
 
