--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -436,8 +436,7 @@ a {
   top: 10px;
 
   width: 200px;
-  height: 100%;
-  //margin-top: 100px;
+  height: 95vh;
   margin-right: 20px;
   overflow: auto;
 
