--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -583,19 +583,30 @@ a {
   }
   &:hover:not(.person--popup) {
     background-color: $color4;
-    transform: scale(1.05);
+  }
+  &:hover:not(.person--popup) .person__photo {
+    transform: scale(1.1);
   }
 }
 
-.person__photo {
-  width: 210px;
-  height: 280px;
-  padding: 10px;
+.person__wrapper {
+  width: 190px;
+  height: 235px;
+  margin-top: 8px;
+  margin-left: 8px;
+  overflow: hidden;
 
-  border-width: 1px;
+  border-width: 2px;
   border-style: solid;
   border-color: $color2;
   border-radius: 5px;
+}
+
+.person__photo {
+  width: 100%;
+  height: 100%;
+
+  transition: all 0.3s ease-in-out;
 }
 
 .person__info {
@@ -604,6 +615,7 @@ a {
   flex-shrink: 0;
   flex-direction: column;
   flex-wrap: wrap;
+  height: calc(100% - 235px);
   margin: 0;
   padding: 0;
   padding: 5px;
@@ -632,7 +644,6 @@ a {
 
 .person__post {
   width: 100%;
-  min-height: 65px;
   margin-bottom: 10px;
 
   font-weight: 400;
@@ -657,9 +668,6 @@ a {
 
     font-size: 10px;
     line-height: 12px;
-    &::before {
-      // background-image: none;
-    }
   }
 }
 
@@ -674,6 +682,9 @@ a {
   font-size: 12px;
   line-height: 14px;
   color: $color1;
+  &--bottom {
+    margin-top: auto;
+  }
 }
 
 .person__caption {
