--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -289,6 +289,7 @@ a {
   text-transform: uppercase;
   font-style: normal;
   letter-spacing: 1px;
+  text-shadow: 2px 2px 4px rgba($color1, 0.5);
 }
 
 // Menu list
@@ -532,6 +533,7 @@ a {
   padding: 0;
 
   text-align: center;
+  text-shadow: 2px 2px 4px rgba($color1, 0.5);
 }
 
 .department {
@@ -540,6 +542,8 @@ a {
   margin-bottom: 20px;
   padding: 0;
   padding-top: 10px;
+
+  text-shadow: 2px 2px 4px rgba($color1, 0.5);
   &:focus {
     outline: none;
   }
@@ -589,11 +593,14 @@ a {
   }
 }
 
-.person__wrapper {
+.person__link {
+  display: block;
   width: 190px;
   height: 235px;
+  margin: 0;
   margin-top: 8px;
   margin-left: 8px;
+  padding: 0;
   overflow: hidden;
 
   border-width: 2px;
